# fullstackdeeplearning_course

./: .gitignore  .pre-commit-config.yaml  DNN101.py  README.md  bootstrap.py  data_utils.py  lab01_pytorch.py  main.py  nn_1layer.py  nn_1layer_pytorch.py  nn_1layer_v2_pytorch.py  nn_1layer_v3_pytorch.py  nn_1layer_v4_pytorch.py  nn_1layer_v5_pytorch.py  nn_1layer_v6_pytorch.py  pyproject.toml  pytorch_lightning_101_v1.py  pytorch_lightning_101_v2.py
