[tool.poetry]
name = "fullstackdeeplearning_course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
requests = "^2.28.1"
black = "^22.8.0"
pyment = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
