[tool.poetry]
name = "fullstackdeeplearning_course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
requests = "^2.28.1"
black = "^22.8.0"
pyment = "^0.3.3"
numpy = "^1.23.3"
jupyter-client = "^7.3.5"
Pillow = "^9.2.0"
CairoSVG = "^2.5.2"
ueberzug = "^18.1.9"
pnglatex = "^1.1"
plotly = "^5.10.0"
jupyterlab = "^3.4.7"
wandb = "^0.13.3"
torchvision = "^0.13.1"
isort = "^5.10.1"
matplotlib = "^3.6.0"
plotext = "^5.2.2"
uniplot = "^0.7.0"
pandas = "^1.5.0"
qtconsole = "^5.3.2"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=70
